# agriTools

./: .coverage.claude.pid537.Xl2bONqx.HdNZqOfwx2Ch  .gitignore  README.md  ROADMAP.md  ROADMAP_STATUS.md  config.toml  create_github_issues.py  protocole_qgis_mayenne.md  pyproject.toml  test_scoring_integration.py  tmp_inspect_rnm.py
app/: main.py
app/components/: comparaison.py  data.py  parcelle.py
app/pages/: 0_Tableau_de_Bord.py  1_Météo.py  2_Prix.py  3_Parcelle.py  4_Comparaison_Parcelles.py
docs/: rnm_ingestion.md
implantation/: README.md
implantation/enrichment/: __init__.py  service.py
implantation/models/: __init__.py  parcelle.py
implantation/reports/: pdf_report.py
implantation/scoring/: __init__.py  criteria.py  engine.py
ingestion/: _config.py
ingestion/geo/: ades.py  bss.py  rpg.py
ingestion/meteo/: meteo_france.py  open_meteo.py
ingestion/perso/: heures.py
ingestion/prix/: dvf.py  rnm.py
pytest-cache-files-fkilmao8/v/cache/: lastfailed  nodeids
scripts/: create_issues.ps1  diag_rnm_sources.py  schedule_meteo.ps1  schedule_rnm.ps1  validate_implantation.py
tests/: test_ades.py  test_app_comparaison.py  test_app_parcelle.py  test_bss.py  test_dvf.py  test_heures.py  test_implantation.py  test_implantation_enrichment.py  test_open_meteo.py  test_page_comparaison.py  test_parcelle_component.py  test_parcelle_persistence.py  test_rnm.py  test_rpg.py
